--- a/index.html
+++ b/index.html
@@ -1,132 +1,82 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Planner Portfolio</title>
-    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css" />
-    <style>
-        :root { --bg: #0f0f0f; --card: #1a1a1a; --accent: #007AFF; --text: #eee; }
-        body { margin: 0; background: var(--bg); color: var(--text); font-family: 'Pretendard', sans-serif; overflow-x: hidden; }
-        
-        /* 1. 헤더: 이름 및 한마디 */
-        header { padding: 80px 20px; text-align: center; background: linear-gradient(to bottom, #000, var(--bg)); }
-        header h1 { font-size: 3rem; margin: 0; }
-        header p { color: #888; font-size: 1.2rem; margin-top: 10px; }
-
-        /* 2. 무한 롤링 배너 (Marquee) */
-        .marquee { background: #151515; padding: 20px 0; overflow: hidden; white-space: nowrap; border-y: 1px solid #333; }
-        .track { display: inline-block; animation: scroll 25s linear infinite; }
-        .item { display: inline-block; padding: 0 40px; font-size: 1.2rem; font-weight: bold; color: #666; }
-        .item span { color: var(--accent); }
-        @keyframes scroll { from { transform: translateX(0); } to { transform: translateX(-50%); } }
-
-        /* 3. 프로젝트 그리드 */
-        .grid { max-width: 1200px; margin: 60px auto; padding: 20px; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; }
-        .card { background: var(--card); border-radius: 20px; overflow: hidden; cursor: pointer; transition: 0.3s; border: 1px solid #222; }
-        .card:hover { transform: translateY(-10px); border-color: var(--accent); }
-        .thumb { height: 200px; background: #333; background-size: cover; background-position: center; }
-        .info { padding: 25px; }
-        .info h3 { margin: 0 0 10px; font-size: 1.4rem; }
-        .info p { color: #888; margin: 0; font-size: 0.95rem; }
-
-        /* 4. 팝업 모달 */
-        .modal { display: none; position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.9); backdrop-filter: blur(10px); z-index: 1000; justify-content: center; align-items: center; }
-        .m-content { background: var(--card); width: 90%; max-width: 1000px; height: 85vh; border-radius: 24px; overflow-y: auto; position: relative; padding: 50px; border: 1px solid #333; }
-        .close { position: absolute; top: 25px; right: 30px; font-size: 35px; cursor: pointer; color: #555; }
-        .close:hover { color: #fff; }
-        iframe { width: 100%; border-radius: 15px; border: 1px solid #333; margin-top: 20px; }
-    </style>
-</head>
-<body>
-
-<header>
-    <h1>게임 기획자 홍길동</h1>
-    <p>데이터 분석과 시스템 설계로 게임의 재미를 수치화합니다.</p>
-</header>
-
-<div class="marquee">
-    <div class="track">
-        <div class="item">🎵 <span>1인 리듬 게임 개발</span></div>
-        <div class="item">🧩 <span>협업: 코코두기</span></div>
-        <div class="item">📈 <span>EA: 밸런스 제안</span></div>
-        <div class="item">💡 <span>EA: 신규 컨텐츠</span></div>
-        <div class="item">📊 <span>야간약국 분석</span></div>
-        <div class="item">🎵 <span>1인 리듬 게임 개발</span></div>
-        <div class="item">🧩 <span>협업: 코코두기</span></div>
-        <div class="item">📈 <span>EA: 밸런스 제안</span></div>
-        <div class="item">💡 <span>EA: 신규 컨텐츠</span></div>
-        <div class="item">📊 <span>야간약국 분석</span></div>
-    </div>
-</div>
-
-<main class="grid">
-    <div class="card" onclick="openM(0)">
-        <div class="thumb" style="background-color: #222;"></div>
-        <div class="info"><h3>1인 리듬 게임 개발</h3><p>GameMaker 기반 핵심 로직 설계</p></div>
-    </div>
-    <div class="card" onclick="openM(1)">
-        <div class="thumb" style="background-color: #2a2a2a;"></div>
-        <div class="info"><h3>협업 프로젝트: 코코두기</h3><p>10인 팀, 헥사타일 레벨 디자인</p></div>
-    </div>
-    <div class="card" onclick="openM(2)">
-        <div class="thumb" style="background-color: #222;"></div>
-        <div class="info"><h3>EA: 밸런스 제안</h3><p>중거리 슛 실점률 8% 감소 성과</p></div>
-    </div>
-    <div class="card" onclick="openM(3)">
-        <div class="thumb" style="background-color: #2a2a2a;"></div>
-        <div class="info"><h3>EA: 신규 컨텐츠 제안</h3><p>유저 사용성(UX) 검증 및 개선안</p></div>
-    </div>
-    <div class="card" onclick="openM(4)">
-        <div class="thumb" style="background-color: #222;"></div>
-        <div class="info"><h3>야간약국 데이터 분석</h3><p>공공 데이터 기반 입지 최적화</p></div>
-    </div>
-</main>
-
-<div id="modal" class="modal" onclick="closeM()">
-    <div class="m-content" onclick="event.stopPropagation()">
-        <span class="close" onclick="closeM()">&times;</span>
-        <div id="m-body"></div>
-    </div>
-</div>
-
-<script>
-    const data = [
-        { 
-            t: "1인 기듬 게임 개발", 
-            d: "<ul><li>GameMaker 엔진 활용 1인 기획 및 개발</li><li>비트 동기화 시스템 설계 및 인게임 연출 담당</li></ul>", 
-            v: "dQw4w9WgXcQ" 
-        },
-        { 
-            t: "코코두기 (Kokodugi)", 
-            d: "<ul><li>유니티 기반 10인 팀 프로젝트</li><li>헥사타일 전략 퍼즐 레벨 디자인 및 UX 개선</li></ul>", 
-            pdf: "https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf" 
-        },
-        { 
-            t: "EA Korea: 밸런스 제안", 
-            d: "<ul><li>Next Field 프로젝트 밸런싱 데이터 분석</li><li>중거리 슛 실점률 8% 감소 기여 및 드리블 밸런스 조정</li></ul>" 
-        },
-        { 
-            t: "EA Korea: 신규 컨텐츠 제안", 
-            d: "<ul><li>시스템 프로토타입 단계 QA 및 재미 검증</li><li>유저 불편함 최소화를 위한 구체적 UI/UX 개선안 제시</li></ul>" 
-        },
-        { 
-            t: "야간약국 데이터 분석", 
-            d: "<ul><li>공공 데이터 분석 교육 과정 수료 성과</li><li>인구 밀도 기반 최적 입지 분석 및 정량적 보고서 작성</li></ul>" 
-        }
-    ];
-
-    function openM(i) {
-        const item = data[i];
-        let content = `<h2>${item.t}</h2><div>${item.d}</div>`;
-        if(item.v) content += `<iframe height="450" src="https://www.youtube.com/embed/${item.v}" frameborder="0" allowfullscreen></iframe>`;
-        if(item.pdf) content += `<iframe src="${item.pdf}" height="600"></iframe>`;
-        document.getElementById('m-body').innerHTML = content;
-        document.getElementById('modal').style.display = 'flex';
-        document.body.style.overflow = 'hidden';
+<style>
+    /* --- 기존 스타일에서 수정/추가할 부분 --- */
+    :root {
+        --accent: #60a5fa; /* 부드러운 블루 */
+        --glass: rgba(255, 255, 255, 0.05);
     }
-    function closeM() { document.getElementById('modal').style.display = 'none'; document.body.style.overflow = 'auto'; }
-</script>
 
-</body>
-</html>
+    /* 롤링 배너 대신 사용할 세련된 그리드 레이아웃 */
+    .bento-grid {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-auto-rows: 200px;
+        gap: 20px;
+        max-width: 1200px;
+        margin: 40px auto;
+        padding: 0 20px;
+    }
+
+    .bento-item {
+        background: var(--glass);
+        border: 1px solid rgba(255,255,255,0.1);
+        border-radius: 24px;
+        padding: 30px;
+        cursor: pointer;
+        transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        position: relative;
+        overflow: hidden;
+    }
+
+    /* 마우스 호버 시 효과: 약간 커지면서 그림자 생성 */
+    .bento-item:hover {
+        transform: scale(1.02);
+        background: rgba(255, 255, 255, 0.1);
+        border-color: var(--accent);
+        box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+    }
+
+    /* 카드 크기 조절 (벤토 스타일) */
+    .item-large { grid-column: span 2; grid-row: span 2; } /* EA 밸런스 */
+    .item-wide { grid-column: span 2; } /* 코코두기 */
+    .item-tall { grid-row: span 2; } /* 야간약국 분석 */
+
+    .bento-item h3 { font-size: 1.5rem; margin-bottom: 8px; }
+    .bento-item p { color: #888; font-size: 0.9rem; }
+    .bento-item .tag { 
+        position: absolute; top: 20px; left: 20px; 
+        background: var(--accent); color: #000;
+        padding: 4px 12px; border-radius: 20px; font-size: 0.75rem; font-weight: bold;
+    }
+</style>
+
+<section class="bento-grid">
+    <div class="bento-item item-large" onclick="openM(2)">
+        <span class="tag">MAIN EXPERIENCE</span>
+        <h3>EA Korea: 밸런스 제안</h3>
+        <p>데이터 분석을 통한 실점률 8% 개선</p>
+    </div>
+
+    <div class="bento-item item-wide" onclick="openM(1)">
+        <h3>협업: 코코두기</h3>
+        <p>10인 팀 프로젝트 및 레벨 디자인</p>
+    </div>
+
+    <div class="bento-item" onclick="openM(0)">
+        <h3>1인 리듬 게임</h3>
+        <p>GameMaker 기반 개발</p>
+    </div>
+
+    <div class="bento-item" onclick="openM(3)">
+        <h3>신규 컨텐츠 제안</h3>
+        <p>UX 검증 및 시스템 기획</p>
+    </div>
+
+    <div class="bento-item item-tall" onclick="openM(4)">
+        <span class="tag">DATA</span>
+        <h3>야간약국 데이터 분석</h3>
+        <p>입지 최적화 모델 도출</p>
+    </div>
+</section>
