--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>Game Planner Portfolio</title>
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css" />
     <style>
-        /* --- [CSS] 스타일 및 애니메이션 --- */
+        /* --- [CSS] 디자인 및 레이아웃 --- */
         :root {
-            --bg: #08080a;
-            --card: rgba(255, 255, 255, 0.03);
-            --card-hover: rgba(255, 255, 255, 0.07);
+            --bg: #0a0a0c;
+            --card: rgba(255, 255, 255, 0.04);
+            --card-hover: rgba(255, 255, 255, 0.08);
             --accent: #3b82f6;
             --text-main: #ffffff;
             --text-sub: #94a3b8;
-            --border: rgba(255, 255, 255, 0.08);
+            --border: rgba(255, 255, 255, 0.1);
         }
 
         body {
@@ -25,16 +25,14 @@
             overflow-x: hidden;
         }
 
-        /* 1. 등장 애니메이션 (Reveal) */
+        /* 등장 및 부유 애니메이션 */
         @keyframes fadeInUp {
             from { opacity: 0; transform: translateY(30px); }
             to { opacity: 1; transform: translateY(0); }
         }
-
-        /* 2. 부유 애니메이션 (Floating) */
         @keyframes floating {
             0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-12px); }
+            50% { transform: translateY(-10px); }
         }
 
         header {
@@ -42,26 +40,26 @@
             padding: 100px 20px 40px;
             animation: fadeInUp 1s ease-out;
         }
-        header h1 { font-size: 3.5rem; font-weight: 800; margin: 0; letter-spacing: -2px; }
-        header p { font-size: 1.3rem; color: var(--text-sub); margin-top: 20px; font-weight: 300; }
+        header h1 { font-size: 3rem; font-weight: 800; margin: 0; }
+        header p { font-size: 1.2rem; color: var(--text-sub); margin-top: 15px; }
         header span { color: var(--accent); }
 
-        /* 벤토 그리드 컨테이너 */
+        /* 프로젝트 그리드: 3열 동일 규격 설정 */
         .container {
             max-width: 1200px; margin: 0 auto 100px;
             padding: 0 20px;
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            grid-auto-rows: 240px;
+            grid-template-columns: repeat(3, 1fr); /* 3열 동일 크기 */
             gap: 24px;
             animation: fadeInUp 1.2s ease-out both;
         }
 
-        /* 개별 카드 스타일 */
-        .bento-item {
+        /* 개별 카드 스타일 (모두 동일) */
+        .project-card {
             background: var(--card);
             border: 1px solid var(--border);
-            border-radius: 40px;
+            border-radius: 32px;
+            aspect-ratio: 1 / 1.1; /* 카드의 세로 비율을 일정하게 유지 */
             padding: 40px;
             position: relative;
             cursor: pointer;
@@ -70,72 +68,59 @@
             justify-content: flex-end;
             backdrop-filter: blur(20px);
             transition: all 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
-            /* 부유 효과 적용 */
             animation: floating 5s ease-in-out infinite;
         }
 
-        /* 카드별 부유 시간차 조절 */
-        .bento-item:nth-child(1) { animation-delay: 0s; }
-        .bento-item:nth-child(2) { animation-delay: 0.7s; }
-        .bento-item:nth-child(3) { animation-delay: 1.4s; }
-        .bento-item:nth-child(4) { animation-delay: 2.1s; }
-        .bento-item:nth-child(5) { animation-delay: 2.8s; }
+        /* 부유 시간차 조절 */
+        .project-card:nth-child(odd) { animation-delay: 0s; }
+        .project-card:nth-child(even) { animation-delay: 1s; }
 
-        /* 마우스 호버 시 인터랙션 (3D 느낌) */
-        .bento-item:hover {
+        .project-card:hover {
             animation-play-state: paused;
             transform: scale(1.03) translateY(-5px);
             background: var(--card-hover);
             border-color: var(--accent);
-            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.5), 0 0 20px rgba(59, 130, 246, 0.2);
+            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.4);
         }
 
-        /* 벤토 아이템 크기 배치 */
-        .large { grid-column: span 2; grid-row: span 2; } 
-        .wide { grid-column: span 2; } 
-        .tall { grid-row: span 2; } 
-
-        .bento-item h3 { font-size: 1.8rem; margin: 0; font-weight: 700; }
-        .bento-item p { font-size: 1.1rem; color: var(--text-sub); margin: 12px 0 0; font-weight: 300; }
-        .bento-item .tag {
-            position: absolute; top: 40px; left: 40px;
-            background: rgba(255,255,255,0.05);
-            padding: 8px 16px; border-radius: 100px;
-            font-size: 0.85rem; font-weight: 600; color: var(--accent);
-            border: 1px solid rgba(59, 130, 246, 0.3);
+        .project-card h3 { font-size: 1.5rem; margin: 0; font-weight: 700; line-height: 1.3; }
+        .project-card p { font-size: 1rem; color: var(--text-sub); margin: 12px 0 0; line-height: 1.5; }
+        .project-card .tag {
+            position: absolute; top: 35px; left: 40px;
+            background: rgba(59, 130, 246, 0.1);
+            padding: 6px 14px; border-radius: 100px;
+            font-size: 0.8rem; font-weight: 600; color: var(--accent);
         }
 
-        /* 모달 팝업 스타일 */
+        /* 팝업 모달 스타일 */
         .modal {
             display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0, 0, 0, 0.95); backdrop-filter: blur(25px);
+            background: rgba(0, 0, 0, 0.95); backdrop-filter: blur(20px);
             z-index: 1000; justify-content: center; align-items: center; padding: 20px;
         }
         .modal-content {
-            background: #111113; width: 100%; max-width: 1100px; height: 85vh;
-            border-radius: 48px; position: relative; overflow-y: auto;
+            background: #111113; width: 100%; max-width: 1000px; height: 85vh;
+            border-radius: 40px; position: relative; overflow-y: auto;
             border: 1px solid var(--border);
         }
         .close-btn {
-            position: sticky; top: 40px; left: calc(100% - 80px);
-            font-size: 45px; color: #444; cursor: pointer; z-index: 100;
+            position: sticky; top: 30px; left: calc(100% - 70px);
+            font-size: 40px; color: #444; cursor: pointer; z-index: 100;
         }
         .close-btn:hover { color: var(--accent); }
 
-        .modal-body { padding: 80px; }
-        .modal-body h2 { font-size: 3rem; margin: 0; color: var(--accent); }
-        .modal-body .desc-text { font-size: 1.3rem; line-height: 1.8; color: var(--text-sub); margin-top: 30px; }
+        .modal-body { padding: 60px; }
+        .modal-body h2 { font-size: 2.5rem; color: var(--accent); margin-top: 0; }
+        .modal-body .desc-text { font-size: 1.2rem; line-height: 1.8; color: var(--text-sub); margin-top: 30px; }
         
-        .media-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin-top: 60px; }
-        iframe { width: 100%; border-radius: 24px; border: 1px solid var(--border); background: #000; }
+        .media-grid { display: grid; grid-template-columns: 1fr; gap: 40px; margin-top: 40px; }
+        iframe { width: 100%; border-radius: 20px; border: 1px solid var(--border); background: #000; }
         .video-box { aspect-ratio: 16/9; }
-        .pdf-box { height: 600px; grid-column: span 2; }
+        .pdf-box { height: 600px; }
 
-        @media (max-width: 1000px) {
-            .container { grid-template-columns: repeat(2, 1fr); }
-            header h1 { font-size: 2.5rem; }
-            .media-grid { grid-template-columns: 1fr; }
-            .pdf-box { grid-column: span 1; }
+        @media (max-width: 900px) {
+            .container { grid-template-columns: 1fr; }
+            .modal-body { padding: 40px; }
         }
     </style>
 </head>
@@ -143,38 +128,38 @@
 
     <header>
         <h1>안녕하세요, <span>홍길동</span>입니다.</h1>
-        <p>EA Korea 2년 경력의 데이터 분석가이자, 즐거움을 수치로 설계하는 게임 기획자입니다.</p>
+        <p>EA Korea 경력과 데이터 역량을 기반으로 이유 있는 재미를 설계합니다.</p>
     </header>
 
     <main class="container">
-        <div class="bento-item large" onclick="openModal(2)">
-            <span class="tag">Main Experience</span>
+        <div class="project-card" onclick="openModal(0)">
+            <span class="tag">Solo Development</span>
+            <h3>1인 리듬 게임 개발</h3>
+            <p>GameMaker 기반 1인 기획/개발 프로젝트</p>
+        </div>
+
+        <div class="project-card" onclick="openModal(1)">
+            <span class="tag">Team Project</span>
+            <h3>협업 프로젝트: 코코두기</h3>
+            <p>10인 팀, 헥사타일 기반 전략 퍼즐 레벨 디자인</p>
+        </div>
+
+        <div class="project-card" onclick="openModal(2)">
+            <span class="tag">Live Service</span>
             <h3>EA Korea: 밸런스 제안</h3>
             <p>데이터 분석을 통한 실점률 8% 감소 성과</p>
         </div>
 
-        <div class="bento-item wide" onclick="openModal(1)">
-            <span class="tag">Team Project</span>
-            <h3>협업: 코코두기</h3>
-            <p>10인 팀 프로젝트, 헥사타일 레벨 디자인 담당</p>
+        <div class="project-card" onclick="openModal(3)">
+            <span class="tag">Content Planning</span>
+            <h3>EA Korea: 신규 컨텐츠</h3>
+            <p>UX 검증 및 사용성 관점의 시스템 개선안</p>
         </div>
 
-        <div class="bento-item" onclick="openModal(0)">
-            <span class="tag">Solo Dev</span>
-            <h3>리듬 게임 개발</h3>
-            <p>GameMaker 기반 1인 기획/개발</p>
-        </div>
-
-        <div class="bento-item" onclick="openModal(3)">
-            <span class="tag">System Design</span>
-            <h3>신규 컨텐츠 제안</h3>
-            <p>사용성(UX) 검증 및 개선안 제시</p>
-        </div>
-
-        <div class="bento-item tall" onclick="openModal(4)">
+        <div class="project-card" onclick="openModal(4)">
             <span class="tag">Data Analysis</span>
             <h3>야간약국 데이터 분석</h3>
-            <p>공공 데이터 기반 입지 최적화 프로세스</p>
+            <p>공공 데이터 활용 최적 입지 선정 프로세스</p>
         </div>
     </main>
 
@@ -187,41 +172,39 @@
     </div>
 
     <script>
-        /* --- [JS] 데이터 관리 및 팝업 동작 --- */
-
         const projects = [
             {
                 title: "1인 기획/개발 리듬 게임",
-                desc: "GameMaker 엔진을 활용하여 음악 비트와 게임 액션의 동기화 로직을 직접 설계한 프로젝트입니다. 게임 제작 파이프라인 전체를 경험하며 기술적 이해도를 확보했습니다.",
-                stats: "<li>음악 비트 기반 시스템 설계 및 인게임 연출 담당</li><li>게임메이커 기반 1인 기획 및 개발 완수</li>",
+                desc: "GameMaker 엔진을 활용하여 음악 비트와 액션의 동기화를 직접 설계했습니다. 게임 제작 파이프라인 전체를 1인 기획/개발로 경험하며 메커니즘 이해도를 확보했습니다.",
+                stats: "<li>비트 기반 시스템 설계 및 인게임 연출 담당</li><li>게임메이커 엔진 활용 로직 기획</li>",
                 video: "dQw4w9WgXcQ", 
                 pdf: ""
             },
             {
                 title: "협업 프로젝트: 코코두기 (Kokodugi)",
-                desc: "기획 4인, 개발 6명 구성의 10인 팀 프로젝트로 유니티 엔진 기반 쿼터뷰 헥사타일 퍼즐 게임입니다. 헥사타일 레벨 디자인과 UX 개선을 주도했습니다.",
-                stats: "<li>헥사타일 기반 전략 퍼즐 레벨 디자인 및 전체 밸런싱 수행</li><li>초심자 유저 이탈 방지를 위한 단계별 튜토리얼 설계</li>",
+                desc: "기획 4인, 개발 6인 구성의 10인 팀 프로젝트입니다. 유니티 엔진 기반 쿼터뷰 헥사타일 퍼즐 게임의 레벨 디자인을 주도했습니다.",
+                stats: "<li>헥사타일 기반 전략 퍼즐 레벨 디자인 및 밸런싱 수행</li><li>유저 이탈률 감소를 위한 단계적 튜토리얼 및 UX 개선</li>",
                 video: "",
-                pdf: "https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf"
+                pdf: ""
             },
             {
                 title: "EA Korea: 데이터 기반 밸런스 제안",
-                desc: "EA Korea QA팀에서 2년간 근무하며 Next Field 프로젝트 밸런싱에 깊이 관여했습니다. 플레이 데이터를 정량적으로 분석하여 실제 체감 개선을 이끌어냈습니다.",
-                stats: "<li>중거리 슛 실점률 분석 후 수치 조정 → 실점률 8% 감소 달성</li><li>신규 드리블 시스템 조작 편의성 개선안 제출 → 성공률 15% 향상 기여</li>",
+                desc: "EA Korea QA팀에서 2년간 근무하며 Next Field 프로젝트의 데이터 기반 밸런싱을 수행했습니다. 정량적 분석을 통해 유효한 지표 개선을 이끌어냈습니다.",
+                stats: "<li>중거리 슛 실점률 분석 후 8% 감소 달성</li><li>신규 드리블 시스템 성공률 15% 향상 기여</li>",
                 video: "",
                 pdf: ""
             },
             {
                 title: "EA Korea: 신규 컨텐츠 QA 및 UX 검증",
-                desc: "프로토타입 단계부터 재미와 깊이를 검증하고, 유저 관점에서 커맨드 직관성과 조작감을 테스트하여 개선안을 제시했습니다.",
-                stats: "<li>라이브 서버 데이터를 실시간 모니터링하여 비정상 플레이 조기 발견 및 대응</li><li>개발팀 협업을 위한 지표 중심의 설득력 있는 기획 보완안 전달</li>",
+                desc: "새로운 시스템 도입 시 프로토타입 단계부터 재미와 깊이를 검증했습니다. 유저 편의성을 위한 구체적 UI/UX 개선안을 제시했습니다.",
+                stats: "<li>커뮤니티 동향 및 인게임 데이터 모니터링을 통한 이슈 조기 발견</li><li>개발팀 협업을 위한 논리적인 지표 중심 기획 제안</li>",
                 video: "",
                 pdf: ""
             },
             {
                 title: "공공 야간약국 입지 데이터 분석",
-                desc: "국가 지원 데이터 교육 과정을 수료하며 쌓은 역량을 바탕으로 사회적 문제를 정량적으로 진단한 프로젝트입니다.",
-                stats: "<li>지역별 인구 밀도 및 유동 인구 데이터를 활용한 입지 최적화 제안</li><li>게임 지표 분석에도 적용 가능한 데이터 기반의 체계적 접근 방식 보유</li>",
+                desc: "국가 지원 데이터 교육을 수료하며 정량적 분석 프로세스를 확립했습니다. 공공 데이터를 활용해 입지 최적화 보고서를 작성했습니다.",
+                stats: "<li>인구 밀도 기반 의료 공백 지역 식별 및 입지 최적화 제안</li><li>게임 데이터 분석에도 적용 가능한 데이터 진단 능력 증명</li>",
                 video: "",
                 pdf: ""
             }
@@ -238,9 +221,9 @@
             modalBody.innerHTML = `
                 <h2>${p.title}</h2>
                 <p class="desc-text">${p.desc}</p>
-                <div style="margin-top: 40px; padding: 30px; background: rgba(255,255,255,0.03); border-radius: 32px;">
-                    <h3 style="color:var(--accent); margin-top:0;">핵심 역량 및 성과</h3>
-                    <ul class="desc-text" style="font-size:1.1rem; margin-bottom:0;">${p.stats}</ul>
+                <div style="margin-top: 40px; padding: 30px; background: rgba(255,255,255,0.03); border-radius: 25px;">
+                    <h3 style="color:var(--accent); margin:0 0 15px 0;">핵심 역량 및 성과</h3>
+                    <ul class="desc-text" style="font-size:1.1rem; margin:0;">${p.stats}</ul>
                 </div>
                 <div class="media-grid">${vSec}${pSec}</div>
             `;
