--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <body>
 
     <header>
-        <h1>안녕하세요, <span>홍길동</span>입니다.</h1>
+        <h1>안녕하세요, <span>이재영</span>입니다.</h1>
         <p>실무 데이터 분석과 게임 개발 경험을 바탕으로 논리적인 재미를 설계합니다.</p>
     </header>
 
